--- a/router/router.yaml
+++ b/router/router.yaml
@@ -22,6 +22,14 @@ coprocessor:
   router:
     response:
       body: true
+
+persisted_queries:
+  enabled: true
+  safelist:
+    enabled: true
+    require_id: false
+apq:
+  enabled: false
   
 cors:
   origins:
